test/interfaces/jturner/min_concept_oper_no_impl_stmt.good
min_concept_oper_no_impl_stmt.chpl:5: In function 'minFn':
min_concept_oper_no_impl_stmt.chpl:5: error: Implementation condition not satisfied.

